# graphviz-comment-reply

./: CLAUDE.md  README.md  package.json
mcp-server/: README.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  graph.rs  lib.rs
