[package]
name = "graphviz-comment-reply"
version = "0.1.0"
description = "A thinking tool — graphs of comments and replies, rendered with GraphViz"
authors = ["chanshunli"]
edition = "2021"

[lib]
name = "graphviz_comment_reply_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
thiserror = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
